added Battletoads (U) support

--- a/habsentminded.cfg
+++ b/habsentminded.cfg
@@ -1,5 +1,6 @@
-[Bt&DD]
- 
+#Config for Battletoads & Double Dragon - The Ultimate Team (U).nes
+
+[DEFAULT] 
 textBankOffset = 0x10010
 treeSize = 0x45
 treeLeftOffset = 0xB5AA
